--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 </div>
 
 <!-- Categories Start -->
-<h2>Portfolio</h2>
+<h2>Hall of Fame</h2>
 <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3 py-4">
     <% if(categories != ''){ %>
         <% categories.forEach(function(category, index) { %>
